Miscellaneous testing improvements (#76)
* Better assertions throughout

* More assertion clean-up

* introduce database-rider

* Don't need to clean up manually anymore